WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202983
SincResampler does not need to create a new AudioBus for each consumeSource call
https://bugs.webkit.org/show_bug.cgi?id=202983
Summary
SincResampler does not need to create a new AudioBus for each consumeSource call
youenn fablet
Reported
2019-10-15 02:13:00 PDT
SincResampler does not need to create a new AudioBus for each consumeSource call
Attachments
Patch
(2.51 KB, patch)
2019-10-15 02:16 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(2.61 KB, patch)
2019-10-17 02:36 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-10-15 02:16:19 PDT
Created
attachment 380974
[details]
Patch
youenn fablet
Comment 2
2019-10-17 02:36:14 PDT
Created
attachment 381185
[details]
Patch
WebKit Commit Bot
Comment 3
2019-10-17 11:19:15 PDT
Comment on
attachment 381185
[details]
Patch Clearing flags on attachment: 381185 Committed
r251249
: <
https://trac.webkit.org/changeset/251249
>
WebKit Commit Bot
Comment 4
2019-10-17 11:19:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-10-17 11:20:17 PDT
<
rdar://problem/56377728
>
Jonathan Bedard
Comment 6
2019-10-29 19:19:20 PDT
We have a test failure in TestWebKitAPI.PreferredAudioBufferSize.AudioElement on Catalina,
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.PreferredAudioBufferSize.AudioElement
. It started out flakey, but now it's consistent....I'm not convinced this is the regression point, but looking at the commits around the time the failure started, it seems like the best candidate.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug