SincResampler does not need to create a new AudioBus for each consumeSource call https://bugs.webkit.org/show_bug.cgi?id=202983

Reviewed by Eric Carlson.

Allocate an internal AudioBus once and for all.
No observable change of behavior.

* platform/audio/SincResampler.cpp:
(WebCore::SincResampler::consumeSource):
* platform/audio/SincResampler.h:


Canonical link: https://commits.webkit.org/216515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251249 268f45cc-cd09-0410-ab3c-d52691b4dbfc