Source/WebCore/platform/audio/SincResampler.cpp
@@ -130,14 +130,15 @@ void SincResampler::consumeSource(float* buffer, unsigned numberOfSourceFrames)
     ASSERT(m_sourceProvider);
     if (!m_sourceProvider)
         return;
-    
+
     // Wrap the provided buffer by an AudioBus for use by the source provider.
-    auto bus = AudioBus::create(1, numberOfSourceFrames, false);
+    if (!m_internalBus || m_internalBus->length() != numberOfSourceFrames)
+        m_internalBus = AudioBus::create(1, numberOfSourceFrames, false);
 
     // FIXME: Find a way to make the following const-correct:
-    bus->setChannelMemory(0, buffer, numberOfSourceFrames);
+    m_internalBus->setChannelMemory(0, buffer, numberOfSourceFrames);
     
-    m_sourceProvider->provideInput(bus.get(), numberOfSourceFrames);
+    m_sourceProvider->provideInput(m_internalBus.get(), numberOfSourceFrames);
 }
 
 namespace {
